[package]
name = "live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/oudingfan/binance-rs" }
chrono = "*"
num-traits = "*"
rust_decimal = "*"
indicatif = "*"
serde_json = "*"
serde = "*"
clap = { version = "*", features = ["derive"] }
